--- a/package.json
+++ b/package.json
@@ -32,13 +32,7 @@
     "react": ">= 16.3.0"
   },
   "dependencies": {
-    "@babel/preset-typescript": "^7.14.5",
-    "@rollup/plugin-node-resolve": "^13.0.2",
-    "@rollup/plugin-typescript": "^8.2.3",
-    "@types/warning": "^3.0.0",
     "countup.js": "^2.0.7",
-    "prop-types": "^15.7.2",
-    "typescript": "^4.3.5",
     "warning": "^4.0.3"
   },
   "devDependencies": {
@@ -46,8 +40,11 @@
     "@babel/plugin-proposal-class-properties": "7.14.5",
     "@babel/preset-env": "7.14.7",
     "@babel/preset-react": "7.14.5",
+    "@babel/preset-typescript": "^7.14.5",
+    "@rollup/plugin-node-resolve": "^13.0.2",
     "@testing-library/react": "12.0.0",
     "@testing-library/react-hooks": "7.0.1",
+    "@types/warning": "^3.0.0",
     "babel-jest": "27.0.6",
     "jest": "27.0.6",
     "prettier": "2.3.2",
@@ -57,6 +54,7 @@
     "react-dom": "17.0.2",
     "react-test-renderer": "17.0.2",
     "rollup": "2.52.4",
-    "rollup-plugin-babel": "4.4.0"
+    "rollup-plugin-babel": "4.4.0",
+    "typescript": "^4.3.5"
   }
 }
