--- a/demo/package.json
+++ b/demo/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "prop-types": "^15.6.2",
     "react": "^17.0.2",
-    "react-countup": "^5.0.0-0",
+    "react-countup": "^5.1.0",
     "react-dom": "^17.0.2",
     "react-feather": "^2.0.9",
     "react-github-corner": "^2.5.0",
