--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "react": ">= 16.3.0"
   },
   "dependencies": {
-    "countup.js": "^2.0.8",
-    "warning": "^4.0.3"
+    "countup.js": "^2.0.8"
   },
   "devDependencies": {
     "@babel/core": "7.14.8",
