--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-countup",
-  "version": "5.2.0",
+  "version": "6.0.0-0",
   "description": "A React component wrapper around CountUp.js",
   "author": "Glenn Reyes <glenn@glennreyes.com> (https://twitter.com/glnnrys)",
   "keywords": [
