--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   ],
   "typings": "build/index.d.ts",
   "scripts": {
+    "format": "prettier --write \"*.md\" \"src/**/*.ts\"",
     "build": "rollup -c && tsc --emitDeclarationOnly --noEmit false --project src/tsconfig.json --outDir build",
     "prepublishOnly": "yarn build",
     "test": "jest"
