--- a/demo/package.json
+++ b/demo/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "prism-react-renderer": "^1.2.1",
     "prop-types": "^15.6.2",
     "react": "^17.0.2",
     "react-countup": "^6.0.0-2",
