--- a/demo/package.json
+++ b/demo/package.json
@@ -6,7 +6,7 @@
     "prism-react-renderer": "^1.2.1",
     "prop-types": "^15.6.2",
     "react": "^17.0.2",
-    "react-countup": "^6.0.0-2",
+    "react-countup": "^6.1.0",
     "react-dom": "^17.0.2",
     "react-feather": "^2.0.9",
     "react-github-corner": "^2.5.0",
