--- a/package.json
+++ b/package.json
@@ -34,17 +34,16 @@
     "react": ">= 16.3.0"
   },
   "dependencies": {
-    "countup.js": "^2.1.0"
+    "countup.js": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "7.18.5",
     "@babel/preset-env": "7.18.2",
-    "@babel/preset-react": "7.16.7",
+    "@babel/preset-react": "7.17.12",
     "@babel/preset-typescript": "^7.14.5",
     "@rollup/plugin-node-resolve": "^13.0.4",
-    "@testing-library/react": "12.1.5",
+    "@testing-library/react": "13.3.0",
     "@testing-library/react-hooks": "8.0.1",
-    "@types/warning": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
     "babel-jest": "28.1.1",
@@ -53,13 +52,13 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "jest": "27.5.1",
+    "jest": "28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
     "prettier": "2.7.1",
     "pretty-quick": "3.1.3",
-    "raf": "3.4.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-test-renderer": "17.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-test-renderer": "18.2.0",
     "rollup": "2.75.7",
     "rollup-plugin-babel": "4.4.0",
     "typescript": "^4.3.5"
