--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "typings": "build/index.d.ts",
   "scripts": {
     "format": "prettier --write \"*.md\" \"src/**/*.ts\"  \"src/**/*.tsx\"",
-    "build": "rollup -c && tsc --emitDeclarationOnly --noEmit false --project src/tsconfig.json --outDir build",
+    "build": "rollup --bundleConfigAsCjs -c && tsc --emitDeclarationOnly --noEmit false --project src/tsconfig.json --outDir build",
     "prepublishOnly": "yarn build",
     "test": "jest"
   },
@@ -34,6 +34,7 @@
     "react": ">= 16.3.0"
   },
   "dependencies": {
+    "@rollup/plugin-babel": "^6.0.2",
     "countup.js": "^2.3.2"
   },
   "devDependencies": {
@@ -59,7 +60,6 @@
     "react-dom": "18.2.0",
     "react-test-renderer": "18.2.0",
     "rollup": "3.4.0",
-    "rollup-plugin-babel": "4.4.0",
     "typescript": "^4.9.3"
   }
 }
