--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "dependencies": {
     "@rollup/plugin-babel": "^6.0.3",
-    "countup.js": "^2.5.0"
+    "countup.js": "^2.6.0"
   },
   "devDependencies": {
     "@babel/core": "7.21.0",
@@ -47,6 +47,7 @@
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "@typescript-eslint/parser": "^5.44.0",
     "babel-jest": "29.5.0",
+    "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
