--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,8 +15,8 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+        node-version: [18.x, 20.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/previous-releases
 
     steps:
       - uses: actions/checkout@v2
